WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181647
[GStreamer] misc fixes and cleanups
https://bugs.webkit.org/show_bug.cgi?id=181647
Summary
[GStreamer] misc fixes and cleanups
Philippe Normand
Reported
2018-01-15 06:32:47 PST
.
Attachments
Patch
(23.01 KB, patch)
2018-01-15 07:24 PST
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Patch
(19.28 KB, patch)
2018-01-16 01:34 PST
,
Philippe Normand
mcatanzaro
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2018-01-15 07:24:45 PST
Created
attachment 331336
[details]
Patch
Michael Catanzaro
Comment 2
2018-01-15 13:33:15 PST
Comment on
attachment 331336
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=331336&action=review
> Source/WebCore/ChangeLog:18 > + (WebCore::MediaPlayerPrivateGStreamer::handleMessage): Switch to > + streaming code path when no content-length was reported by the > + http source element.
Maybe this one is worth splitting into a separate patch?
> Source/WebCore/ChangeLog:31 > + (webkit_web_src_init): Enable keepAlive by default like in souphttpsrc.
Ditto?
> Source/WebCore/ChangeLog:37 > + (CachedResourceStreamingClient::responseReceived): Change appsrc > + stream-type when we wan't seek. Also update caps like souphttpsrc > + does and emit headers as an element message, like souphttpsrc.
Ditto?
> Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:482 > + GST_DEBUG_OBJECT(src, "Persistent connection support %s", priv->keepAlive ? "enabled":"disabled");
Leave spaces around the :
> Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:799 > + GST_DEBUG_OBJECT(src, "Size: %" G_GINT64_FORMAT ", seekable: %s", priv->size, priv->seekable ? "yes":"no");
Ditto
Philippe Normand
Comment 3
2018-01-16 01:34:25 PST
Created
attachment 331374
[details]
Patch
Philippe Normand
Comment 4
2018-01-16 01:35:39 PST
(In reply to Michael Catanzaro from
comment #2
)
> Comment on
attachment 331336
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=331336&action=review
> > > Source/WebCore/ChangeLog:18 > > + (WebCore::MediaPlayerPrivateGStreamer::handleMessage): Switch to > > + streaming code path when no content-length was reported by the > > + http source element. > > Maybe this one is worth splitting into a separate patch? >
Ok
> > Source/WebCore/ChangeLog:31 > > + (webkit_web_src_init): Enable keepAlive by default like in souphttpsrc. > > Ditto? >
Humpf. I don't think so.
> > Source/WebCore/ChangeLog:37 > > + (CachedResourceStreamingClient::responseReceived): Change appsrc > > + stream-type when we wan't seek. Also update caps like souphttpsrc > > + does and emit headers as an element message, like souphttpsrc. > > Ditto? >
Yes
> > Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:482 > > + GST_DEBUG_OBJECT(src, "Persistent connection support %s", priv->keepAlive ? "enabled":"disabled"); > > Leave spaces around the : > > > Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:799 > > + GST_DEBUG_OBJECT(src, "Size: %" G_GINT64_FORMAT ", seekable: %s", priv->size, priv->seekable ? "yes":"no"); > > Ditto
Philippe Normand
Comment 5
2018-01-16 08:00:19 PST
Committed
r226973
: <
https://trac.webkit.org/changeset/226973
>
Radar WebKit Bug Importer
Comment 6
2018-01-16 08:05:49 PST
<
rdar://problem/36543956
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug